--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,7 +1,14 @@
 
 <h1>Result</h1>
-<h1><%= @results_hash %></h1>
 
-<h2><%= @response %></h2>
+<% if @formable_word %>
+  <% if @english_word %>
+    <p><strong>Congratulations!</strong> <%= @word %> is a valid English word!</p>
+  <% else %>
+    <p>Sorry but <strong><%= @word %></strong> does not seem to be a valid English word...</p>
+  <% end %>
+<% else %>
+  <p>Sorry but <strong><%= @word %></strong> can't be built out of <%= @letters.join(", ") %></p>
+<% end %>
 
 <p><%= link_to "Play again", new_path %></p>
